1. add bower_output and lazynvim configure

--- a/doc/1. Neovim常用快捷操作记录.md
+++ b/doc/1. Neovim常用快捷操作记录.md
@@ -431,3 +431,33 @@ which-key.nvim
 * `<leader>?`：显示当前缓冲区（文件）中可用的所有快捷键映射，方便快速查阅当前上下文可使用的操作。
 
 通过这些功能，`which-key.nvim` 显著降低了 Neovim 快捷键的学习和使用成本，尤其适合配置复杂、快捷键较多的环境。
+
+CopilotChat.nvim 插件优势
+
+| 快捷键 | 描述 | 模式 |
+| ---- | ---- | ---- |
+| `<c-s>` | 提交提示（Submit Prompt） | `n` |
+| `<leader>a` | +ai | `n, v` |
+| `<leader>aa` | 切换 CopilotChat（Toggle (CopilotChat)） | `n, v` |
+| `<leader>ap` | 提示操作（Prompt Actions (CopilotChat)） | `n, v` |
+| `<leader>aq` | 快速聊天（Quick Chat (CopilotChat)） | `n, v` |
+| `<leader>ax` | 清除内容（Clear (CopilotChat)） | `n, v` |
+
+### 插件功能说明
+
+`CopilotChat.nvim` 是集成在 LazyVim 生态中的 AI 辅助插件，基于 GitHub Copilot 提供在 Neovim 内直接与 AI 对话的功能，主要用途包括：
+
+1. **代码交互**：在普通模式下可询问代码问题，在可视模式下选中代码后，可让 AI 解释、优化、重构代码片段。
+
+2. **核心操作流程**：
+   * 用 `<leader>aq` 快速打开聊天窗口，输入问题或指令
+   * 按 `<c-s>` 提交内容给 Copilot
+   * 通过 `<leader>aa` 切换聊天窗口的显示/隐藏状态
+   * 用 `<leader>ax` 清除当前聊天记录
+   * `<leader>ap` 可调出预设的提示动作（如"解释代码"、"生成测试"等快捷指令）
+
+3. **模式支持**：
+   * 普通模式（`n`）：对当前文件或输入的文本进行 AI 交互
+   * 可视模式（`v`）：针对选中的代码片段进行精准处理
+
+该插件将 AI 辅助能力无缝融入编辑流程，无需切换到外部工具，适合快速获取代码建议、解决技术问题。
